# PupilTracking

./: README.md  gen_videofiles.py  videofiles_example.txt
DEMO/: README.md
detector/: CMakeLists.txt  Multithreshould.cpp  Multithreshould.h  algo.h  blob_gen.h  canny_impl.h  filter_edges.h  find_best_edge.h  main.cpp
evaluator/: evaluator.py
rebuttal/end2end_method/: TFreader.py  dataset.py  main.py  vgg.py
train_evaluator/: TFRecord_Slim_Reader.py  train.py
train_evaluator/make_dataset/: makedataset.py
