SET("OpenCV_DIR" "SET("OpenCV_DIR" "<path to the /opencv/build/>/")
add_compile_options(-std=c++0x)
PROJECT(PupilDetection)         
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
if(COMMAND cmake_policy)
cmake_policy(SET CMP0003 NEW)
endif(COMMAND cmake_policy)
 
FIND_PACKAGE( OpenCV REQUIRED ) 
ADD_EXECUTABLE(PupilDetection  main.cpp Multithreshould.h Multithreshould.cpp algo.h blob_gen.h canny_impl.h filter_edges.h find_best_edge.h)   
TARGET_LINK_LIBRARIES(PupilDetection ${OpenCV_LIBS})